Fix distillation recipes.
closes #79

- Distillation now uses a proper cache for recipes.
- Outputs are saved and only recalculated on a lazy tick or when called.
- Fix processing gap between recipes.
  - Now starts at 1200 ticks and decreases based on half the heat level.